--- a/src/categories.styles.scss
+++ b/src/categories.styles.scss
@@ -1,7 +1,36 @@
 .categories-container {
-  .card-container {
-    .category-body-container {
-      background-color: red;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.card-container {
+  min-width: 30%;
+  height: 240px;
+  flex: 1 1 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;
+  margin: 0 7.5px 15px;
+  overflow: hidden;
+
+  &:hover {
+    cursor: pointer;
+
+    & .card-bg-img {
+      transform: scale(1.1);
+      transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+    }
+
+    & .category-body-container {
+      opacity: 0.9;
     }
   }
+
+  &.large {
+    height: 380px;
+  }
+
 }
