--- a/src/categories.styles.scss
+++ b/src/categories.styles.scss
@@ -33,4 +33,44 @@
     height: 380px;
   }
 
+  &:first-child {
+    margin-right: 7.5px;
+  }
+
+  &:last-child {
+    margin-left: 7.5px;
+  }
+
+  .card-bg-img {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+  }
+
+  .category-body-container {
+    height: 90px;
+    padding: 0 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    background-color: white;
+    opacity: 0.7;
+    position: absolute;
+
+    h2 {
+      font-weight: bold;
+      margin: 0 6px 0;
+      font-size: 22px;
+      color: #4a4a4a;
+      text-transform: capitalize;
+    }
+
+    p {
+      font-weight: lighter;
+      font-size: 16px;
+    }
+  }
 }
