--- a/src/categories.styles.scss
+++ b/src/categories.styles.scss
@@ -26,6 +26,7 @@
 
     & .category-body-container {
       opacity: 0.9;
+      transition: opacity 1.5s ease-in-out;
     }
   }
 
@@ -50,7 +51,7 @@
 
   .category-body-container {
     height: 90px;
-    padding: 0 25px;
+    padding: 3px 25px 6px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -61,7 +62,7 @@
     position: absolute;
 
     h2 {
-      font-weight: bold;
+      font-weight: 800;
       margin: 0 6px 0;
       font-size: 22px;
       color: #4a4a4a;
@@ -69,7 +70,7 @@
     }
 
     p {
-      font-weight: lighter;
+      font-weight: 400;
       font-size: 16px;
     }
   }
