Converted a tags to Link components via react-router-dom.

--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -9,11 +9,11 @@
   padding: 12px 24px;
 }
 
-.logo {
-  color: teal;
+.logo-container {
+  text-decoration: none;
 
-  & .logo-link {
-    text-decoration: none;
+  & .logo {
+    color: teal;
   }
 }
 
