--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -1,33 +1,48 @@
 .header-nav-container {
   width: 100%;
+  height: 70px;
   position: sticky;
   top: 0;
   left: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 12px 24px;
-}
+  margin-bottom: 24px;
 
-.logo-container {
-  text-decoration: none;
-
-  & .logo {
-    color: teal;
-  }
-}
-
-.nav-links-container {
-  min-width: 50%;
-  margin-right: 48px;
-  
-  & .nav-links-list {
+  .logo-container {
+    height: 100%;
+    width: 70px;
+    padding: 24px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    list-style: none;
-    text-transform: uppercase;
-    font-weight: 600;
+    justify-content: center;
+  
+    & .logo {
+      color: teal;
+    }
   }
+  
+  .nav-links-container {
+    min-width: 50%;
+    margin-right: 24px;
+    
+    & .nav-links-list {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      list-style: none;
+      text-transform: uppercase;
+      font-weight: 600;
+      
+      & .nav-link-item {
+        margin: 0 12px;
 
+        & .nav-link {
+          padding: 12px;
+        }
+      }
+    }
+  
+  }
 }
+
