--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -12,7 +12,7 @@
   .logo-container {
     height: 100%;
     width: 70px;
-    padding: 24px;
+    margin: 0 12px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -36,10 +36,6 @@
       
       & .nav-link-item {
         margin: 0 12px;
-
-        & .nav-link {
-          padding: 12px;
-        }
       }
     }
   
